# discord_rust_bot

./: .env  .gitignore  Cargo.toml  README.md  cookies.json  prefix.json
src/: handler.rs  main.rs  utils.rs
src/commands/: admin.rs  fun.rs  info.rs  mod.rs  rock_paper_scissors.rs  tic_tac_toe.rs
src/data/: config.rs  cookies.rs  level.rs  mod.rs  prefix.rs
