[package]
name = "discord_rust_bot"
version = "0.1.0"
authors = ["Blui42 <komododragon.eins@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


dotenv = "0.15"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
rand = "0.8.5"
toml = "0.5.9"
anyhow = "1.0.56"


[dependencies.tokio]
version = "1.17.0"
features = ["macros", "rt-multi-thread", "time", "signal"]


[dependencies.serenity]
version = "0.11.4"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache"]
