[package]
name = "discord_rust_bot"
version = "0.1.0"
authors = ["Blui42 <komododragon.eins@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fastrand = "1.8"
toml = "0.7"
anyhow = "1.0"


[dependencies.tokio]
version = "1.29"
features = ["macros", "rt-multi-thread", "time", "signal"]


[dependencies.serenity]
version = "0.12"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache"]
