[package]
name = "discord_rust_bot"
version = "0.1.0"
authors = ["Blui42 <komododragon.eins@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
pedantic = "warn"
nursery = "warn"

[dependencies]
dotenvy = "0.15"
fastrand = "2.0"
anyhow = "1.0"
poise = "0.6"

[dependencies.tokio]
version = "1.35"
features = ["macros", "rt-multi-thread", "time", "signal"]
